apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=checkstyle --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=checkstyle --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="utf-8"?><checkstyle version="4.3"><file name="disable-directive.js"><error line="9" column="29" severity="warning" message="Unused eslint-disable directive (no problems were reported from no-debugger)." source="" /><error line="12" column="29" severity="warning" message="Unused eslint-disable directive (no problems were reported from no-debugger)." source="" /><error line="15" column="29" severity="warning" message="Unused eslint-disable directive (no problems were reported from eslint/no-debugger)." source="" /></file></checkstyle>
----------
CLI result: LintSucceeded
----------
