apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=github --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
::warning file=disable-directive.js,line=9,endLine=9,col=29,endColumn=40,title=oxlint::Unused eslint-disable directive (no problems were reported from no-debugger).
::warning file=disable-directive.js,line=12,endLine=12,col=29,endColumn=40,title=oxlint::Unused eslint-disable directive (no problems were reported from no-debugger).
::warning file=disable-directive.js,line=15,endLine=15,col=29,endColumn=47,title=oxlint::Unused eslint-disable directive (no problems were reported from eslint/no-debugger).

Found 3 warnings and 0 errors.
----------
CLI result: LintSucceeded
----------
