apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=gitlab --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=gitlab --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
[
  {
    "description": "Unused eslint-disable directive (no problems were reported from no-debugger).",
    "check_name": "",
    "fingerprint": "af7269eda042dc42",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 9,
        "end": 9
      }
    }
  },
  {
    "description": "Unused eslint-disable directive (no problems were reported from no-debugger).",
    "check_name": "",
    "fingerprint": "36d12bcc55a70e9c",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 12,
        "end": 12
      }
    }
  },
  {
    "description": "Unused eslint-disable directive (no problems were reported from eslint/no-debugger).",
    "check_name": "",
    "fingerprint": "aa917c8221440736",
    "severity": "major",
    "location": {
      "path": "apps/oxlint/disable-directive.js",
      "lines": {
        "begin": 15,
        "end": 15
      }
    }
  }
]----------
CLI result: LintSucceeded
----------
