apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=json --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=json --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
{ "diagnostics": [{"message": "Unused eslint-disable directive (no problems were reported from no-debugger).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 259,"length": 11,"line": 9,"column": 29}}],"related": []},
{"message": "Unused eslint-disable directive (no problems were reported from no-debugger).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 315,"length": 11,"line": 12,"column": 29}}],"related": []},
{"message": "Unused eslint-disable directive (no problems were reported from eslint/no-debugger).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 371,"length": 18,"line": 15,"column": 29}}],"related": []}],
              "number_of_files": 1,
              "number_of_rules": 2,
              "threads_count": 1,
              "start_time": <variable>
            }
            ----------
CLI result: LintSucceeded
----------
