apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=stylish --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=stylish --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------

[4mdisable-directive.js[0m
  [2m9:29 [0m  [33mwarning[0m  Unused eslint-disable directive (no problems were reported from no-debugger).  [2m[0m
  [2m12:29[0m  [33mwarning[0m  Unused eslint-disable directive (no problems were reported from no-debugger).  [2m[0m
  [2m15:29[0m  [33mwarning[0m  Unused eslint-disable directive (no problems were reported from eslint/no-debugger).  [2m[0m

[33m✖ 3 problems (0 errors, 3 warnings)[0m
----------
CLI result: LintSucceeded
----------
