apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=unix --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=unix --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
disable-directive.js:9:29: Unused eslint-disable directive (no problems were reported from no-debugger). [Warning]
disable-directive.js:12:29: Unused eslint-disable directive (no problems were reported from no-debugger). [Warning]
disable-directive.js:15:29: Unused eslint-disable directive (no problems were reported from eslint/no-debugger). [Warning]

3 problems
----------
CLI result: LintSucceeded
----------
